--- a/app/src/main/res/layout/activity_daily_teaching.xml
+++ b/app/src/main/res/layout/activity_daily_teaching.xml
@@ -4,7 +4,8 @@
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="7dp">
+    android:elevation="7dp"
+    tools:ignore="UnusedAttribute">
 
     <LinearLayout
         android:orientation="vertical"
@@ -166,7 +167,8 @@
                              android:layout_marginLeft="20dp"
                              android:layout_marginRight="20dp"
                              android:layout_marginTop="5dp"
-                             android:layout_weight="3.70">
+                             android:layout_weight="3.70"
+                             tools:ignore="InefficientWeight">
 
                          </android.support.v7.widget.RecyclerView>
                      </LinearLayout>
