--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         app:srcCompat="@drawable/eracord_logo"
         android:id="@+id/imageView4"
         android:layout_weight="0.75"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="20dp"
+        android:contentDescription="logo"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
