--- a/app/src/main/res/layout/class_item.xml
+++ b/app/src/main/res/layout/class_item.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -25,7 +23,8 @@
                 android:layout_marginTop="8dp"
                 android:elevation="1dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp" />
+                android:layout_marginRight="20dp"
+                android:contentDescription="drawer_logo"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
