--- a/app/src/main/res/layout/student_catalog_item.xml
+++ b/app/src/main/res/layout/student_catalog_item.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -25,7 +23,8 @@
                 android:layout_marginTop="10dp"
                 android:elevation="1dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp" />
+                android:layout_marginRight="20dp"
+                android:contentDescription="logo"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,8 +67,7 @@
                     android:layout_gravity="center_horizontal"
                     android:textColor="@color/bb_inActiveBottomBarItemColor"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textSize="14sp"
-                    android:textAlignment="textStart"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/textViewid"
