--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -49,16 +49,15 @@ android:elevation="7dp">
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:id="@+id/scrollView">
+            android:id="@+id/scrollView_tt">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/time_nodata"
@@ -79,11 +78,20 @@ android:elevation="7dp">
                     android:layout_height="match_parent">
 
                 </android.support.v7.widget.RecyclerView>
-
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
     </RelativeLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
 
