--- a/app/src/main/res/layout-land/activity_class.xml
+++ b/app/src/main/res/layout-land/activity_class.xml
@@ -25,45 +25,44 @@
             android:layout_width="match_parent">
         </include>
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/noStData"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="@string/no_data"
+                    android:text="@string/no_subject"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:visibility="gone"
                     android:textStyle="normal|bold"
                     android:textAllCaps="true"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:layout_marginTop="40dp" />
 
                 <android.support.v4.widget.SwipeRefreshLayout
                     android:id="@+id/swipe_refresh"
                     android:layout_height="match_parent"
-                    android:layout_width="match_parent">
+                    android:layout_width="wrap_content">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/my_recycler_view"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
                     </android.support.v7.widget.RecyclerView>
                 </android.support.v4.widget.SwipeRefreshLayout>
 
             </LinearLayout>
-        </ScrollView>
-
+        </android.support.v4.widget.NestedScrollView>
     </LinearLayout>
 
 
