--- a/app/src/main/res/layout-v21/daily_fill_catalog.xml
+++ b/app/src/main/res/layout-v21/daily_fill_catalog.xml
@@ -31,7 +31,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <Button
@@ -46,49 +46,50 @@
                 android:layout_alignParentEnd="true"
                 android:minHeight="43dp"
                 android:elevation="1dp"
-                android:clickable="true"
                 android:layout_centerHorizontal="false"
                 android:paddingTop="6dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal" />
 
-            <ScrollView
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fillViewport="false"
-                android:id="@+id/dailyTeachSView">
+                android:id="@+id/scrollView">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="1"
-                    android:layout_weight="1">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
 
                     <TextView
                         android:id="@+id/noDailyTeachData"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="@string/no_data"
+                        android:text="@string/no_daily_teaches"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:visibility="gone"
                         android:textStyle="normal|bold"
                         android:textAllCaps="true"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginTop="40dp" />
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/my_recycler_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    <android.support.v4.widget.SwipeRefreshLayout
+                        android:id="@+id/swipe_refresh"
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent">
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/my_recycler_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-                    </android.support.v7.widget.RecyclerView>
-
+                        </android.support.v7.widget.RecyclerView>
+                    </android.support.v4.widget.SwipeRefreshLayout>
                 </LinearLayout>
-            </ScrollView>
+            </android.support.v4.widget.NestedScrollView>
 
         </RelativeLayout>
 
