--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#337ab7</color>
     <color name="textcolor">#000000</color>
     <color name="colorWhite">#ffffff</color>
+    <drawable name="pressed_color">#50337ab7</drawable> <!--custom color for pressed state -->
+    <drawable name="normal_color">#00FFFFFF</drawable>
 </resources>
