--- a/app/src/main/res/layout/daily_fill_items.xml
+++ b/app/src/main/res/layout/daily_fill_items.xml
@@ -11,7 +11,13 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/divider">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:id="@+id/dailyitem_click"
+    android:background="@drawable/draweritem_select"
+    android:orientation="vertical">
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="fill_parent"
@@ -102,6 +108,7 @@
             android:text="@string/standard"
             android:layout_gravity="left"
             android:fontFamily="sans-serif" />
+    </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
