--- a/app/src/main/res/layout-v21/activity_class.xml
+++ b/app/src/main/res/layout-v21/activity_class.xml
@@ -11,7 +11,8 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@color/appBgColor">
 
         <include
             android:id="@+id/tool_bar"
@@ -25,13 +26,14 @@
             android:layout_width="match_parent">
         </include>
 
-        <android.support.v4.widget.NestedScrollView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
                 <TextView
@@ -60,9 +62,9 @@
                         android:layout_height="wrap_content">
                     </android.support.v7.widget.RecyclerView>
                 </android.support.v4.widget.SwipeRefreshLayout>
-
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+        </ScrollView>
+
     </LinearLayout>
 
 
