--- a/app/src/main/res/layout-v21/activity_daily_teaching.xml
+++ b/app/src/main/res/layout-v21/activity_daily_teaching.xml
@@ -4,12 +4,14 @@
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="7dp">
+    android:elevation="7dp"
+    tools:ignore="UnusedAttribute">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/appBgColor">
 
         <include
             android:id="@+id/tool_bar"
@@ -39,7 +41,7 @@
 
             <TextView
                 android:text="@string/select_date"
-                android:layout_width="150dp"
+                android:layout_width="172dp"
                 android:layout_height="40dp"
                 android:id="@+id/select_date"
                 android:elevation="1dp"
@@ -50,7 +52,7 @@
                 android:fontFamily="serif" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="date"
                 android:ems="10"
@@ -80,11 +82,12 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:spinnerMode="dialog"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:prompt="@string/chapter"
                 android:paddingBottom="10dp"
-                android:paddingTop="10dp" />
+                android:paddingTop="10dp"
+                android:gravity="center_vertical" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/points_recycler_view"
@@ -100,37 +103,38 @@
 
             </android.support.v7.widget.RecyclerView>
             <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="30dp"-->
-                <!--android:layout_marginLeft="5dp"-->
-                <!--android:text="Chapters :"-->
-                <!--android:textColor="@color/textcolor"-->
-                <!--android:textSize="20sp"-->
-                <!--android:layout_marginBottom="5dp"/>-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="30dp"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:text="Chapters :"-->
+            <!--android:textColor="@color/textcolor"-->
+            <!--android:textSize="20sp"-->
+            <!--android:layout_marginBottom="5dp"/>-->
 
             <!--<Spinner-->
-                <!--android:id="@+id/spinner"-->
-                <!--android:layout_marginTop="30dp"-->
-                <!--android:layout_marginBottom="5dp"-->
-                <!--android:prompt="@string/chapter"-->
-                <!--android:spinnerMode="dialog"-->
-                <!--android:background="#50337ab7"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"/>-->
+            <!--android:id="@+id/spinner"-->
+            <!--android:layout_marginTop="30dp"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--android:prompt="@string/chapter"-->
+            <!--android:spinnerMode="dialog"-->
+            <!--android:background="#50337ab7"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"/>-->
         </LinearLayout>
 
-        <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
-        android:layout_height="match_parent"
-            android:paddingTop="10dp"
-            android:id="@+id/scrollView_dailyTeach">
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView_dailyTeach"
+            android:fillViewport="true">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
-
-               <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                <LinearLayout
                     android:orientation="vertical"
                     android:id="@+id/pointslinear"
                     android:layout_width="match_parent"
@@ -155,26 +159,30 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical" >
+                        android:orientation="vertical"
+                        android:weightSum="1">
 
                         <android.support.v7.widget.RecyclerView
-                            android:id="@+id/my_recycler_view"
+                            android:id="@+id/point_recycler_view"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:scrollbars="vertical"
                             android:layout_marginLeft="20dp"
                             android:layout_marginRight="20dp"
-                            android:layout_marginTop="5dp" >
+                            android:layout_marginTop="5dp"
+                            android:layout_weight="3.70"
+                            tools:ignore="InefficientWeight">
 
                         </android.support.v7.widget.RecyclerView>
                     </LinearLayout>
 
                 </LinearLayout>
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+                <LinearLayout
                     android:orientation="horizontal"
                     android:weightSum="1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
 
                     <Button
@@ -190,13 +198,14 @@
                         android:layout_marginRight="20dp"
                         android:background="@color/colorAccent"
                         android:textStyle="normal|bold"
-                        android:layout_marginBottom="20dp"
                         android:textSize="14sp"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginBottom="10dp" />
 
                 </LinearLayout>
+
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+        </ScrollView>
 
     </LinearLayout>
 
@@ -205,7 +214,7 @@
         android:layout_width="320dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#ffffff"
+        android:background="@color/colorWhite"
         android:scrollbars="vertical"
         tools:ignore="RtlHardcoded">
     </android.support.v7.widget.RecyclerView>
