--- a/app/src/main/res/layout/activity_org.xml
+++ b/app/src/main/res/layout/activity_org.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/appBgColor">
 
     <include
         android:id="@+id/tool_bar"
@@ -10,9 +11,9 @@
         style="@style/BB_BottomBarBadge_Text">
     </include>
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -132,11 +133,11 @@
                 android:textSize="15sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textColor="@color/textcolor"
+                android:textColor="@color/bb_tabletRightBorderDark"
                 android:text="@string/hint_login_user"
                 android:clickable="true"
                 android:textAlignment="center" />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
 </LinearLayout>
