--- a/app/src/main/res/layout/presenty_catalog.xml
+++ b/app/src/main/res/layout/presenty_catalog.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/appBgColor">
 
         <LinearLayout
             android:orientation="vertical"
@@ -104,16 +105,16 @@
 
         </LinearLayout>
 
-        <android.support.v4.widget.NestedScrollView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:clipToPadding="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:weightSum="1">
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/noPrData"
@@ -121,7 +122,7 @@
                     android:layout_height="match_parent"
                     android:textColor="@android:color/black"
                     android:text="No Student Available"
-                    android:layout_marginTop="80dp"
+                    android:layout_marginTop="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:visibility="gone"
@@ -131,20 +132,21 @@
                     android:textAllCaps="true" />
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/my_recycler_view"
+                    android:id="@+id/pr_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:scrollbars="vertical"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_weight="0.99"
-                    android:paddingTop="10dp" />
+                    android:paddingTop="10dp" >
+
+                </android.support.v7.widget.RecyclerView>
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="UPDATE"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:clickable="true"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="10dp"
@@ -155,8 +157,9 @@
                     android:textAlignment="center"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp" />
+
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+        </ScrollView>
 
     </LinearLayout>
 
