--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/appBgColor">
 
         <include
             android:id="@+id/tool_bar"
@@ -53,16 +54,17 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal" />
 
-            <android.support.v4.widget.NestedScrollView
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fillViewport="true"
                 android:id="@+id/scrollView_st_catalog">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:id="@+id/scrollLayout">
+                    android:id="@+id/scrollView_st_catalog" >
 
                     <TextView
                         android:id="@+id/noSdData"
@@ -70,7 +72,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="@string/no_tt"
+                        android:text="@string/no_students"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:visibility="gone"
@@ -79,8 +81,9 @@
                         android:textAlignment="center"
                         android:layout_marginTop="40dp" />
 
+
                     <android.support.v7.widget.RecyclerView
-                        android:id="@+id/my_recycler_view"
+                        android:id="@+id/sd_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:descendantFocusability="blocksDescendants"
@@ -88,8 +91,9 @@
                         app:stackFromEnd="true">
 
                     </android.support.v7.widget.RecyclerView>
+
                 </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
+            </ScrollView>
 
         </RelativeLayout>
 
