--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#337ab7</color>
     <color name="colorAccent">#337ab7</color>
+    <color name="appBgColor">#f9f9f9</color>
     <color name="textcolor">#000000</color>
     <color name="colorWhite">#ffffff</color>
 </resources>
