--- a/app/src/main/res/layout-land/presenty_catalog.xml
+++ b/app/src/main/res/layout-land/presenty_catalog.xml
@@ -134,18 +134,18 @@
 
                 <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="413dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="0.64">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical" >
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/pr_recycler_view"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:scrollbars="vertical"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
