--- a/app/src/main/res/layout-v21/activity_class.xml
+++ b/app/src/main/res/layout-v21/activity_class.xml
@@ -51,17 +51,12 @@
                     android:textAlignment="center"
                     android:layout_marginTop="40dp" />
 
-                <android.support.v4.widget.SwipeRefreshLayout
-                    android:id="@+id/swipe_refresh"
-                    android:layout_height="match_parent"
-                    android:layout_width="wrap_content">
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/st_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </android.support.v7.widget.RecyclerView>
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/my_recycler_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </android.support.v7.widget.RecyclerView>
-                </android.support.v4.widget.SwipeRefreshLayout>
             </LinearLayout>
         </ScrollView>
 
