--- a/app/src/main/res/layout/class_item.xml
+++ b/app/src/main/res/layout/class_item.xml
@@ -8,18 +8,19 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:divider="@drawable/divider"
             android:showDividers="beginning|middle|end"
-            android:elevation="2dp">
+            android:elevation="2dp"
+            android:background="@color/colorWhite">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:tag="image_tag"
-                android:layout_height="65dp"
+                android:layout_height="55dp"
                 android:src="@drawable/class_circle"
                 android:layout_weight="0.15"
-                android:layout_width="80dp"
+                android:layout_width="70dp"
                 android:layout_marginTop="8dp"
                 android:elevation="1dp"
                 android:layout_marginLeft="20dp"
@@ -42,8 +43,8 @@
                     android:textColor="@color/colorAccent"
                     android:text="SubjectName"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="18sp"
-                    android:paddingTop="5dp"
+                    android:textSize="16sp"
+                    android:paddingTop="3dp"
                     android:fontFamily="sans-serif"
                     android:textAllCaps="false" />
 
@@ -64,7 +65,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/division"
-                    android:layout_marginTop="2dp" />
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp" />
 
                 <TextView
                     android:id="@+id/textViewid"
@@ -84,8 +86,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_height="0.3dp"
+        android:background="@color/bottomLine"/>
 
 
 </LinearLayout>
