--- a/app/src/main/res/layout/off_class_row.xml
+++ b/app/src/main/res/layout/off_class_row.xml
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:textColor="@color/bb_darkBackgroundColor"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14dp"
+            android:textSize="13dp"
             android:layout_height="wrap_content"
             android:text="@string/points"
             android:layout_gravity="right"
@@ -64,8 +64,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_height="0.3dp"
+        android:background="@color/bottomLine"/>
 
 
 </LinearLayout>
