--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="appBgColor">#f9f9f9</color>
     <color name="textcolor">#000000</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="bottomLine">#dcdcdc</color>
 </resources>
